fixed overflow-x problem

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,8 @@
 @import 'variables';
 
 html {
+  overflow-x: hidden;
+
   &::-webkit-scrollbar {
     width: 12px;
   }
